--- a/HereThereBeDragons.csproj
+++ b/HereThereBeDragons.csproj
@@ -16,13 +16,13 @@
 
     <ItemGroup>
       <Reference Include="Common">
-        <HintPath>..\..\..\..\..\Program Files (x86)\Steam\steamapps\common\Dawnsbury Days\Data\Common.dll</HintPath>
+        <HintPath>D:\SteamLibrary\steamapps\common\Dawnsbury Days\Data\Common.dll</HintPath>
       </Reference>
       <Reference Include="Dawnsbury Days">
-        <HintPath>..\..\..\..\..\Program Files (x86)\Steam\steamapps\common\Dawnsbury Days\Data\Dawnsbury Days.dll</HintPath>
+        <HintPath>D:\SteamLibrary\steamapps\common\Dawnsbury Days\Data\Dawnsbury Days.dll</HintPath>
       </Reference>
       <Reference Include="MonoGame.Framework">
-        <HintPath>..\..\..\..\..\Program Files (x86)\Steam\steamapps\common\Dawnsbury Days\Data\MonoGame.Framework.dll</HintPath>
+        <HintPath>D:\SteamLibrary\steamapps\common\Dawnsbury Days\Data\MonoGame.Framework.dll</HintPath>
       </Reference>
     </ItemGroup>
 
